--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
     </main>
     
     <script src="index.js"></script>
-
+    <script src="//code.tidio.co/gkti8yskuwljwfghmbz4i1gm1ieqdj58.js" async></script>
 </body>
 </html>
 
